--- a/package.json
+++ b/package.json
@@ -10,37 +10,37 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@paypal/react-paypal-js": "^8.9.2",
+    "@stripe/stripe-js": "^4.1.0",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.3",
-    "tailwindcss": "^3.4.6",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "@stripe/stripe-js": "^4.1.0",
-    "@paypal/react-paypal-js": "^8.5.0",
-    "mongoose": "^8.5.1",
-    "next-auth": "^4.24.7",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "zustand": "^4.5.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.408.0",
+    "mongoose": "^8.5.1",
+    "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "postcss": "^8.4.39",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.408.0",
     "sharp": "^0.33.4",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1"
+    "@typescript-eslint/parser": "^7.16.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5"
   }
 }
