--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.4",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
@@ -48,4 +49,3 @@
     "eslint-config-next": "14.2.5"
   }
 }
-
